<resources>
    <string name="app_name">PracticalTest01Var04</string>
    <string name="top_left">Top Left</string>
    <string name="top_right">Top Right</string>
    <string name="center">Center</string>
    <string name="bottom_left">Bottom Left</string>
    <string name="bottom_right">Bottom Right</string>
    <string name="navigate_to_secondary_activity">Navigate to secondary activity</string>
</resources>
